plugins/groovy/testdata/highlighting/pre30/methodReference.groovy
a<error descr="Operator '::' is not supported in current version">::</error>b
